--- a/MediaSearchApp/Base.lproj/Main.storyboard
+++ b/MediaSearchApp/Base.lproj/Main.storyboard
@@ -77,16 +77,15 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rBH-3I-Bt8">
-                                                    <rect key="frame" x="166" y="41" width="608" height="128"/>
+                                                    <rect key="frame" x="113" y="41" width="661" height="128"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="128" id="0ED-65-Kqw"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IP7-Ln-eXL">
-                                                    <rect key="frame" x="36" y="41" width="100" height="80"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IP7-Ln-eXL">
+                                                    <rect key="frame" x="36" y="41" width="47" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="80" id="SZZ-qA-IYE"/>
-                                                        <constraint firstAttribute="width" constant="100" id="Tw7-zz-0Kb"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                     <nil key="textColor"/>
@@ -254,10 +253,11 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KCl-m1-gnp">
                                                     <rect key="frame" x="113" y="61" width="661" height="128"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="128" id="Xid-c2-EfQ"/>
+                                                        <constraint firstAttribute="height" constant="128" id="NlF-bn-TeJ"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="TMB-cN-tqd"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvc-oh-eUy">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvc-oh-eUy">
                                                     <rect key="frame" x="36" y="61" width="47" height="21.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                     <nil key="textColor"/>
@@ -374,18 +374,17 @@
                                             <rect key="frame" x="0.0" y="0.0" width="820" height="225"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hoB-Gv-HfC">
-                                                    <rect key="frame" x="36" y="41" width="100" height="80"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hoB-Gv-HfC">
+                                                    <rect key="frame" x="36" y="41" width="47" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="80" id="6qP-Pp-LV0"/>
-                                                        <constraint firstAttribute="width" constant="100" id="E0s-Vo-yDG"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cY9-e2-4cq">
-                                                    <rect key="frame" x="166" y="41" width="608" height="128"/>
+                                                    <rect key="frame" x="113" y="41" width="661" height="128"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="128" id="L18-4z-U2P"/>
                                                     </constraints>
